--- a/HTML - Personal Site/contact-me.html
+++ b/HTML - Personal Site/contact-me.html
@@ -7,19 +7,24 @@
 </head>
 
 <body>
-  <h1>Contact Information</h1>
-  <ul>
-    <li>
-      <p>
-        Phone: (323)555-5555
-      </p>
-    </li>
-    <li>
-      <p>
-        Email: email@gmail.com
-      </p>
-    </li>
-  </ul>
+  <h1>Contact Information</h3>
+    <p>Phone: (323)555-5555</p>
+    <p> Email: email@gmail.com</p>
 </body>
+<hr>
+<form class="" action="index.html" method="post">
+  <label>Your Name:</label>
+  <input type="text" name="" value="">
+  <br>
+  <label>Your Email:</label>
+  <input type="email" name="">
+  <br>
+  <label>Your Message:</label>
+  <br>
+  <textarea name="name" rows="10" cols="30"></textarea>
+  <br>
+  <input type="submit" name="">
+
+</form>
 
 </html>
