--- a/HTML - Personal Site/contact-me.html
+++ b/HTML - Personal Site/contact-me.html
@@ -12,17 +12,13 @@
     <p> Email: email@gmail.com</p>
 </body>
 <hr>
-<form class="" action="index.html" method="post">
+<form action="mailto:jgonz219@gmail.com" method="post" enctype="text/plain">
   <label>Your Name:</label>
-  <input type="text" name="" value="">
-  <br>
+  <input type="text" name="yourName" value=""><br>
   <label>Your Email:</label>
-  <input type="email" name="">
-  <br>
-  <label>Your Message:</label>
-  <br>
-  <textarea name="name" rows="10" cols="30"></textarea>
-  <br>
+  <input type="email" name="yourEmail"><br>
+  <label>Your Message:</label><br>
+  <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
   <input type="submit" name="">
 
 </form>
