--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -1,93 +1,93 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Jose's Personal Site</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Jose's Personal Site</title>
+</head>
 
-  <body>
-    <table cellspacing="20px">
+<body style="background-color: #EAF6F6">
+  <table cellspacing="20px">
+    <tr>
+      <td>
+        <img src="images/profilepic.jpg" alt="jose profile picture" width="250px" />
+      </td>
+      <td>
+        <h1>Jose Gonzalez</h1>
+        <p>
+          <em>Junior Data Analyst at <strong><a href="https://www.kippla.org">KIPP LA Public Schools</a></strong></em>
+        </p>
+        <p>
+          <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> who recently completed the program is now creating
+          lots of different things at KIPP LA
+        </p>
+      </td>
+    </tr>
+  </table>
+  <hr />
+  <h3>Education</h3>
+  <ul>
+    <li>
+      <a href="https://www.lahigh.org/">Los Angeles High School</a>
+    </li>
+    <li>
+      <a href="http://www.calstatela.edu/">California State University Los Angeles</a>
+    </li>
+  </ul>
+  <hr>
+  <h3>Work Experience</h3>
+  <table cellspacing="10px">
+    <thead>
       <tr>
-        <td>
-          <img src="images/profilepic.jpg" alt="jose profile picture" width="250px" />
-        </td>
-        <td>
-          <h1>Jose Gonzalez</h1>
-          <p>
-            <em>Junior Data Analyst at <strong><a href="https://www.kippla.org">KIPP LA Public Schools</a></strong></em>
-          </p>
-          <p>
-            <a href="https://en.wikipedia.org/wiki/Computer_science">Computer Science</a> who recently completed the program is now creating
-            lots of different things at KIPP LA
-          </p>
-        </td>
+        <th>Dates</th>
+        <th>Work</th>
       </tr>
-    </table>
-    <hr />
-    <h3>Education</h3>
-    <ul>
-      <li>
-        <a href="https://www.lahigh.org/">Los Angeles High School</a>
-      </li>
-      <li>
-        <a href="http://www.calstatela.edu/">California State University Los Angeles</a>
-      </li>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="10px">
-      <thead>
-        <tr>
-          <th>Dates</th>
-          <th>Work</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2018 - Current</td>
-          <td>Junior Data Analyst at KIPP LA Public Schools </td>
-        </tr>
-        <tr>
-          <td>2018</td>
-          <td>Intern at KIPP LA Public Schools</td>
-        </tr>
-      </tbody>
-    </table cellspacing="10px">
-    <hr>
-    <h3>Skills</h3>
-    <table>
-      <tbody>
-        <tr>
-          <td>Python</td>
-          <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
-        </tr>
-        <tr>
-          <td>Javascript</td>
-          <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
-        </tr>
-        <tr>
-          <td>Java</td>
-          <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
-        </tr>
-        <tr>
-          <td>HTML</td>
-          <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-          <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
-        </tr>
-        <tr>
-          <td>C++</td>
-          <td>&#x2B50;&#x2B50;</td>
-        </tr>
-      </tbody>
-    </table>
-    <hr />
-    <a href='hobbies.html'>My Hobbies</a>
-    <br />
-    <a href='contact-me.html'>Contact Me</a>
-  </body>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2018 - Current</td>
+        <td>Junior Data Analyst at KIPP LA Public Schools </td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>Intern at KIPP LA Public Schools</td>
+      </tr>
+    </tbody>
+  </table cellspacing="10px">
+  <hr>
+  <h3>Skills</h3>
+  <table>
+    <tbody>
+      <tr>
+        <td>Python</td>
+        <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
+      </tr>
+      <tr>
+        <td>Javascript</td>
+        <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
+      </tr>
+      <tr>
+        <td>Java</td>
+        <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
+      </tr>
+      <tr>
+        <td>HTML</td>
+        <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td>&#x2B50;&#x2B50;&#x2B50;&#x2B50;</td>
+      </tr>
+      <tr>
+        <td>C++</td>
+        <td>&#x2B50;&#x2B50;</td>
+      </tr>
+    </tbody>
+  </table>
+  <hr />
+  <a href='hobbies.html'>My Hobbies</a>
+  <br />
+  <a href='contact-me.html'>Contact Me</a>
+</body>
 
 </html>
