--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,9 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Jose's Personal Site</title>
+
+  <style>
+    body {
+      background-color: #EAF6F6
+    }
+  </style>
+
 </head>
 
-<body style="background-color: #EAF6F6">
+<body>
   <table cellspacing="20px">
     <tr>
       <td>
