--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,14 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Jose's Personal Site</title>
-
-  <style>
-    body {
-      background-color: #EAF6F6
-    }
-  </style>
-
-</head>
+  <link rel="stylesheet" href="css/styles.css">
 
 <body>
   <table cellspacing="20px">
@@ -31,7 +24,7 @@
       </td>
     </tr>
   </table>
-  <hr />
+  <hr>
   <h3>Education</h3>
   <ul>
     <li>
